--- a/app.env.example
+++ b/app.env.example
@@ -1,8 +1,11 @@
-APP_ENV=
-APP_PORT=
+# Environment setting for the application
+APP_ENV=development/test/production
+APP_PORT=3000
+
+# Database settings
 DB_HOST=
 DB_PORT=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
-DB_DRIVER=
+DB_DRIVER=postgres/mysql
